Added a new method GetCanvasFrame which walks down from the root frame looking for the frame that represents the canvas. b=40217 r=kmcclusk a=karnaze